# PDFNet_Moge

./: .gitignore  API_EXAMPLE.md  CLAUDE.md  INSTALL.md  README.md  apply_pdfnet.py  demo.ipynb  download.py  example.ipynb  pdfnet.py  pdfnet_cli.py  pyproject.toml  run_pdfnet.py
.claude/: settings.local.json
checkpoints/: PDFNet_Best.pth
config/: default.yaml
src/pdfnet/: __init__.py  __main__.py  common_utils.py  config.py  config_types.py  constants.py  demo.py  inference.py  model_loader.py  train.py  typed_inference.py  utiles.py
src/pdfnet/core/: __init__.py  losses.py  typed_losses.py
src/pdfnet/data/: __init__.py  transforms.py  typed_transforms.py
src/pdfnet/dataloaders/: Mydataset.py  __init__.py  dis_dataset.py
src/pdfnet/metric_tools/: Test.py  __init__.py  basics.py  benchmark.py  soc_metrics.py
src/pdfnet/models/: PDFNet.py  __init__.py  swin_transformer.py  utils.py
